<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.gobble.gobble_up.Register">


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/header"
            android:id="@+id/imageButton"
            tools:ignore="ContentDescription" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_account"
            android:layout_gravity="center_horizontal"
            android:id="@+id/textView"
            android:layout_marginTop="-5dp"
            android:fontFamily="sans-serif-thin"
            android:textSize="37sp"
            android:textColor="@color/black"
            />

        <LinearLayout
            android:id="@+id/line1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="bottom"
            android:padding="@dimen/activity_vertical_margin"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_username"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColorHint="#B6B6B4"
                android:textColor="#B6B6B4"
                android:hint="@string/user_name"
                android:layout_margin="5dp"
                android:inputType="text"
                android:padding="13dp" />

            <EditText
                android:id="@+id/et_Email_id"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColorHint="#B6B6B4"
                android:textColor="#B6B6B4"
                android:hint="@string/email_id"
                android:layout_margin="5dp"
                android:inputType="textEmailAddress"
                android:padding="13dp" />



            <EditText
                android:id="@+id/et_pass"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColorHint="#B6B6B4"
                android:textColor="#B6B6B4"
                android:hint="@string/password"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:padding="13dp" />

            <EditText
                android:id="@+id/et_re_type_password"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient"
                android:layout_width="fill_parent"
                android:layout_gravity="center"
                android:textSize="13sp"
                android:textColorHint="#B6B6B4"
                android:textColor="#B6B6B4"
                android:hint="@string/re_type_password"
                android:layout_margin="5dp"
                android:inputType="textPassword"
                android:padding="13dp" />


            <LinearLayout
                android:id="@+id/line2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="5dp"
                android:orientation="horizontal">


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="ContentDescription" />



                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/or"
                    android:id="@+id/textView12"
                    android:textSize="18sp"
                    android:layout_marginTop="5dp"
                    android:textColor="@color/grey"
                    android:layout_gravity="center_horizontal" />


                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:src="@drawable/line"
                    android:layout_gravity="center_horizontal"
                    tools:ignore="ContentDescription" />


            </LinearLayout>


            <LinearLayout
                android:id="@+id/line22"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:baselineAligned="false">


                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="2"
                    android:orientation="horizontal"
                    tools:ignore="UselessParent">

                    <com.facebook.login.widget.LoginButton
                        android:id="@+id/bt_mailid"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:paddingBottom="19dp"
                        android:paddingTop="19dp"
                        android:textSize="10sp"
                        android:text="@string/sign_in_with_facebook"
                        android:layout_margin="2.5dp"
                        android:textAllCaps="true"
                        android:textColor="@color/white"
                        android:layout_weight="0.5"
                        android:background="#3b5998"
                        tools:ignore="NestedWeights,SmallSp" />

                    <Button
                        android:id="@+id/bt_google"
                        android:layout_width="0dp"
                        android:layout_margin="2.5dp"
                        android:textSize="10sp"
                        android:layout_height="50dp"

                        android:text="@string/sign_in_with_google"
                        android:background="@color/red"
                        android:layout_weight=".5"

                        android:textColor="@color/white"
                        tools:ignore="SmallSp" />
                </LinearLayout>



            </LinearLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/by_creating_an_account_you_are_agree_nto_our_term_of_use_and_privacy_policy"
                android:id="@+id/textView1"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-thin"
                android:textColor="@color/black"
                android:layout_gravity="center_horizontal" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/creat_account"
                android:id="@+id/bt_submit"
                android:background="@color/colorPrimaryDark"
                android:textColor="@color/white"
                android:textStyle="bold"
                android:textSize="18sp"
                android:layout_marginTop="5dp"
                android:fontFamily="sans-serif-thin"
                android:layout_gravity="center_horizontal" />



        </LinearLayout>

        <LinearLayout
            android:id="@+id/lineardata"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="center"   >


        </LinearLayout>

    </LinearLayout>


</ScrollView>
