<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_marginStart="10dp"
    android:layout_marginEnd="10dp"
    tools:context="com.gobble.gobble_up.LoginActivity"
    android:orientation="vertical">



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >


    <ImageButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/header"
        android:layout_gravity="center_horizontal"
        android:layout_margin="10dp"
        tools:ignore="ContentDescription" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sign_in"
        android:textStyle="bold"
        android:fontFamily="sans-serif-thin"
        android:textSize="30sp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:layout_marginStart="10dp"
        android:textColor="@color/black" />


    <LinearLayout
        android:id="@+id/line1"
        android:layout_width="fill_parent"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_height="match_parent"
        android:layout_margin="10dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp">

        <com.facebook.login.widget.LoginButton
            android:id="@+id/bt_facebook1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/sign_in_with_facebook"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:gravity="center"
            android:textColor="@color/white"

            android:background="@drawable/round_facebook"
             />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/sign_in_with_facebook"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/fb"
                android:textColor="@color/white"
                android:background="@drawable/round_facebook"
                />


        </RelativeLayout>
<!--
        <Button
            android:id="@+id/bt_google1"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Sign in with Google +"
            android:gravity="center"
            android:background="@color/red"
            android:layout_marginBottom="10dp"
            android:textColor="@color/white"
            />
-->

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            >

        <com.google.android.gms.common.SignInButton
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:id="@+id/bt_google_sign"


            />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingBottom="10dp"
                android:paddingTop="10dp"
                android:gravity="center"
                android:background="@drawable/round_google"
                android:paddingStart="10dp"
                android:paddingEnd="10dp"
                android:drawableStart="@drawable/goog"
                android:text="Sign in with Google"
                android:textColor="@color/white"
                />



        </RelativeLayout>
        <com.andreabaccega.widget.FormEditText
            android:id="@+id/et_Email"
            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:layout_width="fill_parent"
            android:layout_gravity="center"
            android:textSize="13sp"
            app:testType="email"
            android:textColorHint="#B6B6B4"
            app:customRegexp="^[a-zA-Z0-9._%+-]+@[a-zA-Z0-9.-]+\.[a-zA-Z]{2,4}$"
            app:testErrorString="Not a valid Email"

            android:layout_marginBottom="10dp"
            android:textColor="#B6B6B4"
            android:hint="@string/your_mail"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <com.andreabaccega.widget.FormEditText
            android:id="@+id/et_Password"

            android:layout_height="wrap_content"
            android:background="@drawable/gradient"
            android:layout_width="fill_parent"
            android:textColorHint="#B6B6B4"
            android:textColor="#B6B6B4"
            android:layout_marginBottom="10dp"
            android:layout_gravity="center"
            android:textSize="13sp"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:padding="15dp" />






        <TextView
            android:id="@+id/tv_userforgotpassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/i_forgot_my_password"

            android:textAllCaps="true"
            android:textColor="@color/black"
            android:gravity="center"
            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"/>


        <Button
            android:id="@+id/bt_signin"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="SIGN IN"
            android:textSize="18sp"
            android:textColor="@color/colorAccent"
            android:layout_gravity="center_horizontal"
            android:background="@color/colorPrimaryDark"/>





        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/create_my_account"
            android:textColor="#000000"
            android:id="@+id/bt_creataccount"
            android:textStyle="bold"

            android:gravity="center"
            android:padding="10dp"

            android:layout_marginTop="10dp"
            android:layout_gravity="center_horizontal" />



    </LinearLayout>




    </LinearLayout>


    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:id="@+id/login_progress"
        android:visibility="gone"
        />


</RelativeLayout>
